--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
       </ng-template>
       <ng-template pTemplate="body" let-dataCatagories >
           <tr id="dataCal" >
-              <td  >{{dataCatagories}}</td>
+              <td style="text-align: center;" >{{dataCatagories}}</td>
           </tr>
       </ng-template>
       <ng-template pTemplate="paginatorleft">
