--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,7 @@
 }
 
   
-  #myTable {
+  /* #myTable {
     border-collapse: collapse;
     width: 100%;
     border: 1px solid #ddd;
@@ -26,11 +26,11 @@
   }
   
   #myTable tr {
-    /* display: flex;
-    flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     border-bottom: 1px solid #ddd;
   }
   
   #myTable tr.header, #myTable tr:hover {
     background-color: #f1f1f1;
-  }
+  } */
